Add labels for WS port

--- a/default.env
+++ b/default.env
@@ -12,8 +12,12 @@ POSTGRES_DOCKER_TAG=15
 
 # Secure web proxy - to be used with traefik
 DOMAIN=example.com
+
 RPC_HOST=polygon-zkevm
 RPC_LB=polygon-zkevm-lb
+
+WS_HOST=polygon-zkevm-ws
+WS_LB=polygon-zkevm-ws-lb
 
 # Used by ethd update - please do not adjust
 ENV_VERSION=1
