--- a/node.yml
+++ b/node.yml
@@ -16,7 +16,10 @@ services:
         - CONFIG_URL=https://github.com/0xPolygonHermez/zkevm-node/raw/release/${NODE_DOCKER_TAG}/config/environments/${ZKEVM_NETWORK}/node.config.toml
     image: zkevm-rpc:${NODE_DOCKER_TAG}
     pull_policy: build
-    container_name: zkevm-rpc
+    networks:
+      default:
+        aliases:
+          - zkevm-rpc
     restart: unless-stopped
     depends_on:
       zkevm-pool-db:
@@ -44,7 +47,6 @@ services:
       - traefik.http.routers.${RPC_HOST}lb.rule=Host(`${RPC_LB}.${DOMAIN}`)
       - traefik.http.routers.${RPC_HOST}lb.tls.certresolver=letsencrypt
       - traefik.http.services.${RPC_HOST}.loadbalancer.server.port=8545
-
       - traefik.http.routers.${WS_HOST}.service=${WS_HOST}
       - traefik.http.routers.${WS_HOST}.entrypoints=websecure
       - traefik.http.routers.${WS_HOST}.rule=Host(`${WS_HOST}.${DOMAIN}`)
@@ -65,7 +67,10 @@ services:
         - CONFIG_URL=https://github.com/0xPolygonHermez/zkevm-node/raw/release/${NODE_DOCKER_TAG}/config/environments/${ZKEVM_NETWORK}/node.config.toml
     image: zkevm-sync:${NODE_DOCKER_TAG}
     pull_policy: build
-    container_name: zkevm-sync
+    networks:
+      default:
+        aliases:
+          - zkevm-sync
     restart: unless-stopped
     depends_on:
       zkevm-state-db:
@@ -92,7 +97,10 @@ services:
         - PROVER_INIT_SQL_URL=https://github.com/0xPolygonHermez/zkevm-node/raw/release/${NODE_DOCKER_TAG}/db/scripts/init_prover_db.sql
     image: zkevm-state-db:${POSTGRES_DOCKER_TAG}
     pull_policy: build
-    container_name: zkevm-state-db
+    networks:
+      default:
+        aliases:
+          - zkevm-state-db
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
@@ -114,7 +122,10 @@ services:
     <<: *logging
 
   zkevm-pool-db:
-    container_name: zkevm-pool-db
+    networks:
+      default:
+        aliases:
+          - zkevm-pool-db
     restart: unless-stopped
     image: postgres:${POSTGRES_DOCKER_TAG}
     healthcheck:
@@ -143,7 +154,10 @@ services:
         - PROVER_JSON_URL=https://github.com/0xPolygonHermez/zkevm-node/raw/release/${NODE_DOCKER_TAG}/config/environments/${ZKEVM_NETWORK}/prover.config.json
     image: zkevm-prover:${PROVER_DOCKER_TAG}
     pull_policy: build
-    container_name: zkevm-prover
+    networks:
+      default:
+        aliases:
+          - zkevm-prover
     restart: unless-stopped
     depends_on:
       zkevm-state-db:
