--- a/default.env
+++ b/default.env
@@ -1,23 +1,35 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
-COMPOSE_FILE=node.yml
+# node.yml is the five-part zkEVM node, cdk-erigon.yml is an all-in-one Erigon
+COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 
-# Possible values mainnet or testnet
+# Possible values mainnet or testnet - node.yml only
 ZKEVM_NETWORK=testnet
-ZKEVM_NODE_ETHERMAN_URL=example.com
+# Ethereum L1 RPC URL, most be valid
+L1_RPC=https://eth-rpc.example.com
 
-# Check versions in docker compose here 
-NODE_DOCKER_TAG=v0.5.12
-PROVER_DOCKER_TAG=v4.0.14
-POSTGRES_DOCKER_TAG=15
+# Version if using cdk-erigon.yml
+ERIGON_DOCKER_TAG=v1.0.6
+# Versions if using node.yml
+NODE_DOCKER_TAG=v0.6.5
+PROVER_DOCKER_TAG=v6.0.0
+POSTGRES_DOCKER_TAG=16
+
+# Ports for RPC and WS. Erigon uses the RPC port for both
+RPC_PORT=8545
+WS_PORT=8546
+
+# If you wish to restrict port sharing to a specific IP such as 127.0.0.1
+SHARE_IP=
+
+# Can specify a version of this repo, uses latest if left empty
+SCRIPT_TAG=
 
 # Secure web proxy - to be used with traefik
 DOMAIN=example.com
-
 RPC_HOST=polygon-zkevm
 RPC_LB=polygon-zkevm-lb
-
 WS_HOST=polygon-zkevm-ws
 WS_LB=polygon-zkevm-ws-lb
 
-# Used by ethd update - please do not adjust
-ENV_VERSION=1
+# Used by zkevmd update - please do not adjust
+ENV_VERSION=2
