--- a/default.env
+++ b/default.env
@@ -2,16 +2,17 @@
 # node.yml is the five-part zkEVM node, cdk-erigon.yml is an all-in-one Erigon
 COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 
-# Possible values mainnet or testnet - node.yml only
-ZKEVM_NETWORK=testnet
+# Possible values mainnet, testnet, xlayer-mainnet, xlayer-testnet
+# XLayer requires cdk-erigon.yml
+NETWORK=testnet
 # Ethereum L1 RPC URL, most be valid
 L1_RPC=https://eth-rpc.example.com
 
 # Version if using cdk-erigon.yml
-ERIGON_DOCKER_TAG=v1.0.6
+ERIGON_DOCKER_TAG=v1.0.7
 # Versions if using node.yml
-NODE_DOCKER_TAG=v0.6.5
-PROVER_DOCKER_TAG=v6.0.0
+NODE_DOCKER_TAG=v0.6.6
+PROVER_DOCKER_TAG=v6.0.2
 POSTGRES_DOCKER_TAG=16
 
 # Ports for RPC and WS. Erigon uses the RPC port for both
@@ -32,4 +33,4 @@ WS_HOST=polygon-zkevm-ws
 WS_LB=polygon-zkevm-ws-lb
 
 # Used by zkevmd update - please do not adjust
-ENV_VERSION=2
+ENV_VERSION=3
