--- a/node.yml
+++ b/node.yml
@@ -42,6 +42,7 @@ services:
       - metrics.scrape=true
       - metrics.port=9091
       - metrics.path=/metrics
+      - metrics.network=polygon-zkevm-${NETWORK}
       - traefik.enable=true
       - traefik.http.routers.${RPC_HOST}.service=${RPC_HOST}
       - traefik.http.routers.${RPC_HOST}.entrypoints=websecure
@@ -97,6 +98,7 @@ services:
       - metrics.scrape=true
       - metrics.port=9091
       - metrics.path=/metrics
+      - metrics.network=polygon-zkevm-${NETWORK}
     <<: *logging
 
   zkevm-state-db:
