--- a/config/mainnet.yaml
+++ b/config/mainnet.yaml
@@ -1,5 +1,7 @@
 datadir: /home/erigon/.local/share/erigon
 chain: hermez-mainnet
+http: true
+private.api.addr: localhost:9091
 zkevm.l2-chain-id: 1101
 zkevm.l2-sequencer-rpc-url: https://zkevm-rpc.com
 zkevm.l2-datastreamer-url: stream.zkevm-rpc.com:6900
@@ -19,6 +21,12 @@ zkevm.l1-rollup-id: 1
 zkevm.l1-block-range: 20000
 zkevm.l1-query-delay: 6000
 zkevm.l1-first-block: 16896700
+zkevm.rpc-ratelimit: 250
 zkevm.datastream-version: 2
 
 externalcl: true
+http.api: [eth, debug, net, trace, web3, erigon, zkevm]
+http.addr: 0.0.0.0
+http.vhosts: any
+http.corsdomain: any
+ws: true
