--- a/cdk-erigon.yml
+++ b/cdk-erigon.yml
@@ -20,8 +20,7 @@ services:
       - /home/erigon/.local/share/erigon-config/${NETWORK}.yaml
       - --zkevm.l1-rpc-url
       - ${L1_RPC}
-      - --zkevm.rpc-ratelimit
-      - "250"
+      - --zkevm.rpc-ratelimit=250
       - --maxpeers
       - "32"
       - --downloader.disable.ipv6
