--- a/default.env
+++ b/default.env
@@ -7,6 +7,8 @@ COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 NETWORK=testnet
 # Ethereum L1 RPC URL, most be valid
 L1_RPC=https://eth-rpc.example.com
+# Default if not provided is 250
+# L1_RPC_RATELIMIT=250
 
 # Version if using cdk-erigon.yml
 ERIGON_DOCKER_TAG=v1.0.7
