--- a/default.env
+++ b/default.env
@@ -11,11 +11,13 @@ L1_RPC=https://eth-rpc.example.com
 # L1_RPC_RATELIMIT=250
 
 # Version if using cdk-erigon.yml
-ERIGON_DOCKER_TAG=v1.1.5.8
+ERIGON_DOCKER_TAG=v1.2.15.3
 # Versions if using node.yml
 NODE_DOCKER_TAG=v0.7.0
 PROVER_DOCKER_TAG=v6.0.2
 POSTGRES_DOCKER_TAG=16
+
+ERIGON_EXTRAS=
 
 # Ports for RPC and WS. Erigon uses the RPC port for both
 RPC_PORT=8545
@@ -35,4 +37,4 @@ WS_HOST=polygon-zkevm-ws
 WS_LB=polygon-zkevm-ws-lb
 
 # Used by zkevmd update - please do not adjust
-ENV_VERSION=3
+ENV_VERSION=4
