Remove deprecated node

--- a/default.env
+++ b/default.env
@@ -1,5 +1,4 @@
 # The settings are in .env, use "nano .env". Don't edit default.env itself.
-# node.yml is the five-part zkEVM node, cdk-erigon.yml is an all-in-one Erigon
 COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 
 # Possible values mainnet, testnet, xlayer-mainnet, xlayer-testnet
@@ -8,20 +7,14 @@ NETWORK=testnet
 # Ethereum L1 RPC URL, most be valid
 L1_RPC=https://eth-rpc.example.com
 # Default if not provided is 250
-# L1_RPC_RATELIMIT=250
+L1_RPC_RATELIMIT=250
 
-# Version if using cdk-erigon.yml
 ERIGON_DOCKER_TAG=v1.2.15.3
-# Versions if using node.yml
-NODE_DOCKER_TAG=v0.7.0
-PROVER_DOCKER_TAG=v6.0.2
-POSTGRES_DOCKER_TAG=16
 
 ERIGON_EXTRAS=
 
-# Ports for RPC and WS. Erigon uses the RPC port for both
+# Port for RPC and WS both
 RPC_PORT=8545
-WS_PORT=8546
 
 # If you wish to restrict port sharing to a specific IP such as 127.0.0.1
 SHARE_IP=
@@ -33,8 +26,6 @@ SCRIPT_TAG=
 DOMAIN=example.com
 RPC_HOST=polygon-zkevm
 RPC_LB=polygon-zkevm-lb
-WS_HOST=polygon-zkevm-ws
-WS_LB=polygon-zkevm-ws-lb
 
 # Used by zkevmd update - please do not adjust
-ENV_VERSION=4
+ENV_VERSION=5
