--- a/rpc-shared.yml
+++ b/rpc-shared.yml
@@ -1,6 +1,5 @@
-# To be used in conjunction with node.yml or cdk-erigon.yml
+# To be used in conjunction with cdk-erigon.yml
 services:
-  zkevm-rpc:
+  zkevm-erigon:
     ports:
       - ${SHARE_IP:-}:${RPC_PORT}:${RPC_PORT:-8545}/tcp
-      - ${SHARE_IP:-}:${WS_PORT}:${WS_PORT:-8546}/tcp
