--- a/cdk-erigon.yml
+++ b/cdk-erigon.yml
@@ -7,7 +7,7 @@ x-logging: &logging
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
 services:
-  zkevm-erigon:
+  cdk-erigon:
     image: hermeznetwork/cdk-erigon:${ERIGON_DOCKER_TAG}
     restart: "unless-stopped"
     user: 1000:1000
