--- a/cdk-erigon.yml
+++ b/cdk-erigon.yml
@@ -21,7 +21,6 @@ services:
       - /home/erigon/.local/share/erigon-config/${NETWORK}.yaml
       - --zkevm.l1-rpc-url
       - ${L1_RPC}
-      - --zkevm.rpc-ratelimit=${L1_RPC_RATELIMIT:-250}
       - --maxpeers
       - "32"
       - --downloader.disable.ipv6
@@ -35,6 +34,12 @@ services:
       - --http.vhosts=*
       - --http.corsdomain=*
       - --ws
+      - --ws.api
+      - eth,net,trace,web3,erigon,zkevm
+      - --ws.addr
+      - 0.0.0.0
+      - --ws.port
+      - ${WS_PORT}
       - --metrics
       - --metrics.addr
       - 0.0.0.0
@@ -54,6 +59,15 @@ services:
       - traefik.http.routers.${RPC_HOST}lb.rule=Host(`${RPC_LB}.${DOMAIN}`)
       - traefik.http.routers.${RPC_HOST}lb.tls.certresolver=letsencrypt
       - traefik.http.services.${RPC_HOST}.loadbalancer.server.port=${RPC_PORT}
+      - traefik.http.routers.${WS_HOST}.service=${WS_HOST}
+      - traefik.http.routers.${WS_HOST}.entrypoints=websecure
+      - traefik.http.routers.${WS_HOST}.rule=Host(`${WS_HOST}.${DOMAIN}`)
+      - traefik.http.routers.${WS_HOST}.tls.certresolver=letsencrypt
+      - traefik.http.routers.${WS_HOST}lb.service=${WS_HOST}
+      - traefik.http.routers.${WS_HOST}lb.entrypoints=websecure
+      - traefik.http.routers.${WS_HOST}lb.rule=Host(`${WS_LB}.${DOMAIN}`)
+      - traefik.http.routers.${WS_HOST}lb.tls.certresolver=letsencrypt
+      - traefik.http.services.${WS_HOST}.loadbalancer.server.port=${WS_PORT}
     <<: *logging
 
 volumes:
