--- a/default.env
+++ b/default.env
@@ -6,15 +6,14 @@ COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 NETWORK=testnet
 # Ethereum L1 RPC URL, most be valid
 L1_RPC=https://eth-rpc.example.com
-# Default if not provided is 250
-L1_RPC_RATELIMIT=250
 
-ERIGON_DOCKER_TAG=v1.2.15.3
+ERIGON_DOCKER_TAG=v2.1.0
 
 ERIGON_EXTRAS=
 
-# Port for RPC and WS both
+# Ports for RPC and WS
 RPC_PORT=8545
+WS_PORT=8546
 
 # If you wish to restrict port sharing to a specific IP such as 127.0.0.1
 SHARE_IP=
@@ -26,6 +25,8 @@ SCRIPT_TAG=
 DOMAIN=example.com
 RPC_HOST=polygon-zkevm
 RPC_LB=polygon-zkevm-lb
+WS_HOST=polygon-zkevmws
+WS_LB=polygon-zkevmws-lb
 
 # Used by zkevmd update - please do not adjust
-ENV_VERSION=5
+ENV_VERSION=6
