--- a/default.env
+++ b/default.env
@@ -6,6 +6,8 @@ COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 NETWORK=testnet
 # Ethereum L1 RPC URL, most be valid
 L1_RPC=https://eth-rpc.example.com
+# Default if not provided is 250
+L1_RPC_RATELIMIT=250
 
 ERIGON_DOCKER_TAG=v2.1.0
 
