--- a/default.env
+++ b/default.env
@@ -2,7 +2,6 @@
 COMPOSE_FILE=cdk-erigon.yml:rpc-shared.yml
 
 # Possible values mainnet, testnet, xlayer-mainnet, xlayer-testnet
-# XLayer requires cdk-erigon.yml
 NETWORK=testnet
 # Ethereum L1 RPC URL, most be valid
 L1_RPC=https://eth-rpc.example.com
@@ -12,6 +11,9 @@ L1_RPC_RATELIMIT=250
 ERIGON_DOCKER_TAG=v2.60.0
 
 ERIGON_EXTRAS=
+
+# File containing chaindata/ directory. Make sure to match the pruning settings with ERIGON_EXTRAS
+SNAPSHOT=
 
 # Ports for RPC and WS
 RPC_PORT=8545
@@ -31,4 +33,4 @@ WS_HOST=polygon-zkevmws
 WS_LB=polygon-zkevmws-lb
 
 # Used by zkevmd update - please do not adjust
-ENV_VERSION=6
+ENV_VERSION=7
