--- a/default.env
+++ b/default.env
@@ -8,6 +8,14 @@ L1_RPC=https://eth-rpc.example.com
 # Default if not provided is 250
 L1_RPC_RATELIMIT=250
 
+# For xlayer souce build use (replace v0.7.1 with version you want)
+# ERIGON_DOCKER_CONTEXT=https://github.com/okx/xlayer-erigon.git#v0.7.1
+# ERIGON_DOCKERFILE=Dockerfile
+# ERIGON_DOCKER_REPO=thorax/erigon
+# ERIGON_DOCKER_TAG=Version you want ie v0.7.1
+ERIGON_DOCKER_CONTEXT=./cdk-erigon
+ERIGON_DOCKERFILE=Dockerfile.binary
+ERIGON_DOCKER_REPO=hermeznetwork/cdk-erigon
 ERIGON_DOCKER_TAG=v2.60.0
 
 ERIGON_EXTRAS=
