fix args passed

--- a/cdk-erigon.yml
+++ b/cdk-erigon.yml
@@ -27,8 +27,8 @@ services:
       context: ${ERIGON_DOCKER_CONTEXT}
       dockerfile: ${ERIGON_DOCKERFILE}
       args:
-        - ERIGON_DOCKER_TAG=${OPGETH_DOCKER_TAG}
-        - ERIGON_DOCKER_REPO=${OPGETH_DOCKER_REPO}
+        - ERIGON_DOCKER_TAG=${ERIGON_DOCKER_TAG}
+        - ERIGON_DOCKER_REPO=${ERIGON_DOCKER_REPO}
     restart: "unless-stopped"
     user: 1000:1000
     volumes:
