--- a/cdk-erigon.yml
+++ b/cdk-erigon.yml
@@ -30,6 +30,7 @@ services:
         - ERIGON_DOCKER_TAG=${ERIGON_DOCKER_TAG}
         - ERIGON_DOCKER_REPO=${ERIGON_DOCKER_REPO}
     restart: "unless-stopped"
+    pull_policy: never
     user: 1000:1000
     volumes:
       - zkevm-erigon-data:/home/erigon/.local/share/erigon
