--- a/default.env
+++ b/default.env
@@ -8,7 +8,7 @@ L1_RPC=https://eth-rpc.example.com
 # Default if not provided is 250
 L1_RPC_RATELIMIT=250
 
-# For xlayer souce build use (replace v0.7.1 with version you want)
+# For xlayer source build use (replace v0.7.1 with version you want)
 # ERIGON_DOCKER_CONTEXT=https://github.com/okx/xlayer-erigon.git#v0.7.1
 # ERIGON_DOCKERFILE=Dockerfile
 # ERIGON_SRC_REPO=thorax/erigon
