--- a/default.env
+++ b/default.env
@@ -14,7 +14,7 @@ L1_RPC_RATELIMIT=250
 # ERIGON_SRC_REPO=thorax/erigon
 # ERIGON_SRC_TAG=Version you want ie v0.7.1
 ERIGON_DOCKER_CONTEXT=./cdk-erigon
-ERIGON_DOCKERFILE=Dockerfile.source
+ERIGON_DOCKERFILE=Dockerfile.binary
 ERIGON_SRC_REPO=hermeznetwork/cdk-erigon
 ERIGON_SRC_TAG=v2.60.0
 
