Support building from source for xlayer (#4)
* upgrades from ethd template

* docompose fix

* build image to use

* fix args passed

* change pull policy

* patterned with eth-docker

* fix spelling

* make refactor changes

* refactor naming

--- a/default.env
+++ b/default.env
@@ -8,7 +8,15 @@ L1_RPC=https://eth-rpc.example.com
 # Default if not provided is 250
 L1_RPC_RATELIMIT=250
 
-ERIGON_DOCKER_TAG=v2.60.0
+# For xlayer source build use (replace v0.7.1 with version you want)
+# DOCKER_CONTEXT=https://github.com/okx/xlayer-erigon.git#v0.7.1
+# ERIGON_DOCKERFILE=Dockerfile
+# DOCKER_REPO=thorax/erigon
+# DOCKER_TAG=Version you want ie v0.7.1
+DOCKER_CONTEXT=./cdk-erigon
+ERIGON_DOCKERFILE=Dockerfile.binary
+DOCKER_REPO=hermeznetwork/cdk-erigon
+DOCKER_TAG=v2.60.0
 
 ERIGON_EXTRAS=
 
@@ -33,4 +41,4 @@ WS_HOST=polygon-zkevmws
 WS_LB=polygon-zkevmws-lb
 
 # Used by zkevmd update - please do not adjust
-ENV_VERSION=7
+ENV_VERSION=8
