--- a/cdk-erigon.yml
+++ b/cdk-erigon.yml
@@ -20,9 +20,17 @@ services:
     volumes:
       - zkevm-erigon-data:/tmp/cdk-erigon
       - /etc/localtime:/etc/localtime:ro
+
   cdk-erigon:
-    image: hermeznetwork/cdk-erigon:${ERIGON_DOCKER_TAG}
+    image: ${NETWORK}-cdk-erigon:local
+    build:
+      context: ${DOCKER_CONTEXT}
+      dockerfile: ${ERIGON_DOCKERFILE}
+      args:
+        - DOCKER_TAG=${DOCKER_TAG}
+        - DOCKER_REPO=${DOCKER_REPO}
     restart: "unless-stopped"
+    pull_policy: never
     user: 1000:1000
     volumes:
       - zkevm-erigon-data:/home/erigon/.local/share/erigon
